# juce_cuda_convolution

./: .gitignore  CMakeLists.txt  README.md
binarydata/: CMakeLists.txt
modules/: README.md
source/: main.cpp
source/cuda/: kernel.cu  kernel.h
terminalapp/: CMakeLists.txt
terminalapp/source/: audiocallback.cpp  audiocallback.h  main.cpp
terminalapp/source/cuda/: ConvKernel.cu  ConvKernel.cuh  GPUConvEngine.cu  GPUConvEngine.cuh  kernel.cu  kernel.h
